syntax = "proto3";

package transport_catalog_serialize;


message RouterSettings {
  double bus_wait_time = 1;
  double bus_velocity = 2;
}